Clean up code and fix warnings